<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">阳光智园</string>
    <!--登录-->
    <string name="login_name_hint">请输入账号</string>
    <string name="login_phone_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_account">注册账号</string>
    <string name="forget_psd">忘记密码</string>
    <string name="exit_hint">再按一次退出程序</string>
    <string name="push_notification">消息推送设置</string>
    <string name="img_description">图片内容描述</string>
    <string name="wipe_cache">清除缓存</string>
    <string name="quit_login">退出登录</string>
    <!--忘记密码-->
    <string name="forget_password_title">忘记密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="send_verification_code">我们将发送验证码到你的手机：</string>
    <string name="enter_verification_code">请输入验证码</string>
    <string name="test_get_code">获取验证码</string>
    <!--注册-->
    <string name="username">用户名</string>
    <string name="phonenumber">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="hint_username">请输入姓名+手机号</string>
    <string name="hint_phonenumber">请输入注册手机号</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="for_one">换一张</string>
    <string name="next_step">下一步</string>
    <string name="phone_verification">手机验证码</string>
    <string name="reacquire">重新获取</string>
    <string name="set_password">设置密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="hint_input_phone">请输入手机验证码</string>
    <string name="hint_input_password">请输入注册密码</string>
    <string name="hint_input_confirm_password">请再次输入密码</string>
    <string name="toast_input_username">请输入用户名</string>
    <string name="toast_over_username_lenth">用户名超过限制长度</string>
    <string name="toast_input_effective_phonenum">请输入有效的手机号</string>
    <string name="toast_input_verificate">请输入验证码</string>
    <string name="toast_verificate_code_failure">验证码已失效，请重新获取</string>
    <string name="toast_get_verificate_code">请点击获取验证码</string>
    <string name="toast_input_correct_verificate_code">请输入正确的验证码</string>
    <string name="toast_null_correct_verificate_code">密码不能为空</string>
    <string name="toast_password_rule1">由6-20个字符组成，支持字母，数字，特殊字符</string>
    <string name="toast_password_rule2">请使用字母、数字和符号两种及以上组合</string>
    <string name="toast_diff_password">两次输入的密码不一致</string>
    <string name="toast_diff_password_and_username">密码不能与用户名相同</string>

    <!--我的智园-->
    <string name="pending_payment">待付款</string>
    <string name="received">待收货</string>
    <string name="completed">已完成</string>
    <string name="cancelled">已取消</string>
    <string name="all_order">全部订单</string>
    <string name="after_sale_service">售后服务</string>
    <string name="order_feedback">订购反馈</string>
    <string name="sunshine_service">阳光客服</string>
    <string name="about_guarden">关于智园</string>
    <string name="feedback">意见反馈</string>
    <!--修改密码-->
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="save">保存</string>
    <string name="hint_old_password">请输入旧密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_confirm_new_password">请再次输入新密码</string>
    <!--忘记密码-->
    <string name="forget_password">忘记密码</string>
    <!--绑定手机号-->
    <string name="password">密码</string>
    <string name="hint_input_bindphone2_password">请输入密码</string>
    <string name="hint_input_new_phonenum">请输入新手机号</string>
    <string name="hint_input_verfication_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>

</resources>