<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_gray_bg"
    >
<!--旧密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_15"
        android:background="@color/white"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_25"
            android:layout_marginLeft="@dimen/dimen_25"
            >
            <TextView
                android:id="@+id/old_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textColor="@color/common_text_black"
                android:textSize="@dimen/size_15" />
            <EditText
                android:layout_toRightOf="@id/old_password_tv"
                android:id="@+id/old_password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_input_password"
                android:singleLine="true"
                android:textColor="@color/common_text_black"
                android:textColorHint="@color/common_text_hint"
                android:textSize="@dimen/size_15"
                android:layout_marginLeft="@dimen/dimen_20"
                />
            <ImageView
                android:id="@+id/is_see_old_password_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/close_eye"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_alignParentRight="true"
                >
            </ImageView>
        </RelativeLayout>
    </LinearLayout>
    <include layout="@layout/common_full_line"></include>
<!--新密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_25"
            android:layout_marginLeft="@dimen/dimen_25"
            >
            <TextView
                android:id="@+id/new_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/common_text_black"
                android:textSize="@dimen/size_15" />
            <EditText
                android:layout_toRightOf="@id/new_password_tv"
                android:id="@+id/new_password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_new_password"
                android:singleLine="true"
                android:textColor="@color/common_text_black"
                android:textColorHint="@color/common_text_hint"
                android:textSize="@dimen/size_15"
                android:layout_marginLeft="@dimen/dimen_20"
                />
            <ImageView
                android:id="@+id/is_see_new_password_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/close_eye"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_alignParentRight="true"
                >
            </ImageView>
        </RelativeLayout>
    </LinearLayout>
    <include layout="@layout/common_full_line"></include>
<!--确认密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_25"
            android:layout_marginLeft="@dimen/dimen_25"
            >
            <TextView
                android:id="@+id/confirm_new_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/common_text_black"
                android:textSize="@dimen/size_15" />
            <EditText
                android:layout_toRightOf="@id/confirm_new_password_tv"
                android:id="@+id/new_password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_confirm_new_password"
                android:singleLine="true"
                android:textColor="@color/common_text_black"
                android:textColorHint="@color/common_text_hint"
                android:textSize="@dimen/size_15"
                android:layout_marginLeft="@dimen/dimen_10"
                />
            <ImageView
                android:id="@+id/is_see_new_password_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/close_eye"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_alignParentRight="true"
                >
            </ImageView>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50" />
<!--保存-->
<include layout="@layout/common_button"></include>
    <!--忘记密码-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_50"
        >
        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/common_text_black"
            android:textSize="@dimen/dimen_15"
            />
    </RelativeLayout>
</LinearLayout>