<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/common_gray_bg">

    <LinearLayout
        android:id="@+id/verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_15"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_verification_code"
            android:textColor="@color/common_text_black"
            android:textSize="@dimen/dimen_15"
            android:id="@+id/textView2"/>

        <TextView
            android:id="@+id/edt_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/color_phone_red"
            android:textSize="@dimen/dimen_15"
            android:maxLines="1"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/verification_code"
        android:background="@color/common_line_bg"
        android:id="@+id/common_line"/>

    <RelativeLayout
        android:id="@+id/forget_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_centerInParent="true"
        android:padding="@dimen/dimen_10"
        android:background="@color/white"
        android:layout_below="@+id/common_line"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/verification_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dimen_05"
            android:text="@string/verification_code"
            android:textColor="@color/common_text_black"
            android:textSize="@dimen/size_15" />

        <EditText
            android:id="@+id/edt_forget_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_toRightOf="@id/verification_code_tv"
            android:hint="@string/enter_verification_code"
            android:layout_centerVertical="true"
            android:textColor="@color/common_content_gray"
            android:textSize="@dimen/dimen_15"
            android:layout_marginLeft="@dimen/dimen_10"
            android:textColorHint="@color/common_text_hint"
            android:maxLines="1"
            android:inputType="number"/>
        <Button
            android:id="@+id/forget_check_num"
            android:layout_width="@dimen/dimen_95"
            android:layout_height="@dimen/dimen_35"
            android:layout_alignParentRight="true"
            android:text="@string/test_get_code"
            android:background="@drawable/shape_btn_verification"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_15"
            android:gravity="center"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/forget_rl"
        android:id="@+id/next_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50">
        <include
            layout="@layout/common_button"
            />
    </RelativeLayout>

</RelativeLayout>