<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_25"
            android:layout_marginLeft="@dimen/dimen_25"
            >
            <TextView
                android:id="@+id/phone_verification_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_verification"
                android:textColor="@color/common_text_black"
                android:textSize="@dimen/size_15" />
            <EditText
                android:layout_toRightOf="@id/phone_verification_code_tv"
                android:id="@+id/regist_phone_verfication_et"
                android:layout_width="@dimen/dimen_120"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_input_phone"
                android:singleLine="true"
                android:textColor="@color/common_text_black"
                android:textColorHint="@color/common_text_hint"
                android:textSize="@dimen/size_15"
                android:layout_marginLeft="@dimen/dimen_10"
                android:inputType="number"
                />
            <LinearLayout
                android:layout_toRightOf="@id/regist_phone_verfication_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_alignParentRight="true"
                >
                <TextView
                    android:layout_width="@dimen/dimen_01"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_05"
                    android:layout_marginRight="@dimen/dimen_05"
                    android:background="@color/common_line_bg"
                    />
                <TextView
                    android:id="@+id/change_phone_verfication"
                    android:layout_width="@dimen/dimen_160"
                    android:layout_height="wrap_content"
                    android:text="@string/reacquire"
                    android:textColor="@color/common_line_bg"
                    android:textSize="@dimen/size_18"
                    android:layout_marginLeft="@dimen/dimen_04"
                    />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>