<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginBottom="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_25"
        android:layout_marginLeft="@dimen/dimen_25"
        >
        <TextView
            android:id="@+id/verification_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:textColor="@color/common_text_black"
            android:textSize="@dimen/size_15" />
        <EditText
            android:layout_toRightOf="@id/verification_code_tv"
            android:id="@+id/regist_phonenumber"
            android:layout_width="@dimen/dimen_120"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hint_verification_code"
            android:singleLine="true"
            android:textColor="@color/common_text_black"
            android:textColorHint="@color/common_text_hint"
            android:textSize="@dimen/size_15"
            android:layout_marginLeft="@dimen/dimen_20"
            android:inputType="number"
            />
        <LinearLayout
            android:layout_toRightOf="@id/regist_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_alignParentRight="true"
            >
        <ImageView
            android:id="@+id/verification_code_image"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:layout_alignParentLeft="true"
            android:background="@drawable/verficate_code_bg"
            android:layout_marginLeft="@dimen/dimen_05"
            android:layout_marginRight="@dimen/dimen_05"
            />
        <TextView
            android:id="@+id/change_pic"
            android:layout_width="@dimen/dimen_160"
            android:layout_height="wrap_content"
            android:text="@string/for_one"
            android:textColor="@color/common_line_bg"
            android:textSize="@dimen/size_18"
            android:layout_marginLeft="@dimen/dimen_04"
            />
        </LinearLayout>

    </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="@dimen/dimen_180"
        android:layout_height="1dp"
        android:background="@color/common_line_bg"
        android:layout_marginLeft="@dimen/dimen_25"
        android:layout_marginRight="@dimen/dimen_25"
        android:layout_marginBottom="@dimen/dimen_20"
        />

</LinearLayout>